plugins {
    id 'idea'
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.fonseca.algashop'
version = '0.0.1-SNAPSHOT'
description = 'Ordering microservice'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
    implementation 'commons-validator:commons-validator:1.9.0'
    implementation 'io.hypersistence:hypersistence-tsid:2.1.4'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.h2database:h2'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.assertj:assertj-core:3.27.3'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

test {
    filter {
        excludeTestsMatching("*IT")
    }
}

tasks.named('check') {
    dependsOn(test, integrationTest)
}

tasks.register('integrationTest', Test) {
    description('Run integrationTest.')
    group('verification')
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    shouldRunAfter test
    useJUnitPlatform()
    jvmArgs(
            '-XX:+EnableDynamicAgentLoading', // Permite carregamento dinâmico de agentes Java (necessário para Mockito no JDK 21+)
            '-Xshare:off' // Desabilita (Class Data Sharing) para evitar warning de bootstrap classpath
    )
    testLogging {
        events('passed')
    }

    filter {
        includeTestsMatching "*IT"
        excludeTestsMatching "*Test"
    }
}
